# plex-postgresql

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.standalone  INSTALL.md  MIGRATION_PLAN.md  Makefile  README.es.md  README.md  RELEASE_NOTES.md  THIRD_PARTY_LICENSES  TRANSLATOR_TEST_TAGS.md  UUID_PATCH_DETAILS.md  build_shim_musl.sh  docker-compose.standalone.yml  docker-compose.yml
rust/plex-pg-core/: Cargo.toml
rust/plex-pg-core/benches/: bench_cache.rs  bench_core.rs  bench_micro.rs  bench_shim.rs
rust/plex-pg-core/src/: byte_utils.rs  c_abi.rs  db_interpose_bind.rs  db_interpose_column.rs  db_interpose_column_badcast.rs  db_interpose_column_decltype.rs  db_interpose_common.rs  db_interpose_conn_utils.rs  db_interpose_exec.rs  db_interpose_helpers.rs  db_interpose_helpers_tests.rs  db_interpose_metadata.rs  db_interpose_open.rs  db_interpose_prepare.rs  db_interpose_prepare_helpers.rs  db_interpose_prepare_utils.rs  db_interpose_step.rs  db_interpose_step_cached_read_utils.rs  db_interpose_step_read_utils.rs  db_interpose_step_write_utils.rs  db_interpose_stmt_lifecycle.rs  db_interpose_trace_helpers.rs  db_interpose_txn_utils.rs  db_interpose_value.rs  dedup.rs  env_utils.rs  exception_what.rs  ffi.rs  ffi_types.rs  fishhook.rs  functions.rs  keywords.rs  keywords_tests.rs  lib.rs  libpq_helpers.rs  pg_client.rs  pg_client_registry.rs  pg_client_stmt_cache.rs  pg_config.rs  pg_logging.rs  (+16 more)
rust/plex-pg-core/tests/: exception_handler.rs  json_coverage_matrix.rs  known_gaps_expected_failures.rs  logging_deadlock.rs  pool_autogrow.rs  pool_exhaustion.rs  (+6 more)
(+176 files in other folders)
