[package]
name = "plex-pg-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "plex_pg_core"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
sqlparser = { version = "0.61", features = ["serde"] }
serde_json = "1"
libc = "0.2"

[dev-dependencies]
# none extra needed — sqlparser is enough for tests
